--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     width: 100%;
-    height: 100%;
+    height: auto;
     font-size: 16px;
     line-height: 1;
     background-color: rgb(90, 86, 82);
@@ -22,25 +22,28 @@ body {
   font-size: 60px;
 }
 header{
-  
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 200px;
 background-color: rgb(170, 240, 217);
-border: 5px solid black;
+/* border: 5px solid black; */
 color: black;
 
 }
 
+p{
+  font-size: 20px;
+}
 .mainBox{
   display: flex;
   text-align: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
 background-color: rgb(90, 14, 14);
-border: rgb(251, 251, 251) 5px solid;
+/* border: rgb(251, 251, 251) 5px solid; */
   
 }
 aside{
@@ -59,7 +62,7 @@ aside{
 }
 
 input{ 
-  border-radius: 8px;
+  /* border-radius: 8px; */
   background-color: lightgoldenrodyellow;
   width: 28vh;
   height: 60px;
@@ -79,13 +82,13 @@ color:rgb(17, 17, 16)
 
   background-size: cover;
   width: 85%;
-border: 5px solid fuchsia ;
+/* border: 5px solid fuchsia ; */
 }
 #weatherHeader{
 background: rgb(65, 50, 50);
 width: 100%;
 height: auto;
-border: 5px solid white;
+/* border: 5px solid white; */
 padding: 30px;
 text-align: left;
 background: transparent;
@@ -93,17 +96,31 @@ color: white;
 }
 
 .cardBox{
- margin-top: 100px; 
+ 
  width: 100%;
  height: auto;
- border: 5px solid rgb(52, 238, 52); 
  display: flex;
  justify-content: space-between;
+ /* border: 5px solid rgb(52, 238, 52);  */
+}
+#fiveDaysForecast{
+width: 100%;
+height: auto;
+margin-top: 100px;
+margin-bottom: 100px;
+color: white;
+font-size: 60px;
+justify-content: center;
+align-items: center;
+padding: 30px;
+
+
+
 }
 .weatherCard{
 width: 19%;
 height: 50vh;
-border: 2px solid white;
+/* border: 2px solid white; */
 color: white;
 text-align: left;
 padding:50px  0px 0px 10px;
