--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,9 @@ aside {
   min-width: 30vh;
   background-color: rgb(60, 52, 52);
   color: rgb(185, 217, 255);
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .sBtn {
@@ -68,7 +71,10 @@ input {
   height: 50px;
   border-radius: 8px;
 }
-
+.search{
+width: 100%;
+height: 200px;
+}
 #searchArea {
   color: rgb(1, 1, 1)
 }
@@ -121,6 +127,15 @@ input {
   padding: 50px 0px 0px 10px;
   background: #000000a0;
   border-radius: 30px;
+}
+
+#searchHistory
+{
+  background-color: lightblue;
+  border: 2px solid red ;
+  width: 28vh;
+  height: 50px;
+
 }
 
 #gradient {
