history-buttons-link

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
   font-size: 16px;
   line-height: 1;
   background-color: rgb(90, 86, 82);
+ 
   /*background-size: cover;
     background-position: center;
     background-repeat: no-repeat; */
@@ -26,14 +27,14 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 200px;
+  height: auto;
   background-color: rgb(170, 240, 217);
   border-bottom: 1px solid rgb(255, 255, 255);
   color: black;
 }
 
 p {
-  font-size: 20px;
+  font-size: 2vw;
 }
 
 .mainBox {
@@ -48,8 +49,8 @@ aside {
   border-right: rgb(171, 171, 171) 2px solid; 
   width: 20%;
   padding-top: 30px;
-  max-width: 40vh;
-  min-width: 30vh;
+  /* max-width: 40vh; */
+  /* min-width: 30vh; */
   background-color: rgb(60, 52, 52);
   color: rgb(185, 217, 255);
 }
@@ -162,7 +163,18 @@ border: rgb(186, 8, 8) solid 2px; */
   color: rgb(14, 12, 12);
   font-size: 40px;
 }
+/* #history2
+{
 
+  margin-top: 50px;
+  background-color: rgb(176, 229, 250);
+  border-radius: 8px;
+  /* border: 2px solid red; */
+  width: 28vh;
+  height: 55px;
+  color: rgb(14, 12, 12);
+  font-size: 40px;
+} */
 #gradient {
   height: 200px;
   background-image: linear-gradient(to right, rgba(80, 80, 177, 0), rgb(70, 72, 168));
