--- a/assets/style.css
+++ b/assets/style.css
@@ -25,13 +25,13 @@ header {
   text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+   align-items: center; 
   width: 100%;
-  height: auto;
-  background-color: rgb(170, 240, 217);
+   height: auto;
+  background-color: rgb(156, 210, 227);
   border-bottom: 1px solid rgb(255, 255, 255);
-  color: black;
-}
+  color: rgb(217, 211, 211);
+} 
 
 p {
   font-size: 2vw;
@@ -170,14 +170,14 @@ border: rgb(186, 8, 8) solid 2px; */
   background-color: rgb(176, 229, 250);
   border-radius: 8px;
   /* border: 2px solid red; */
-  width: 28vh;
+  /* width: 28vh;
   height: 55px;
   color: rgb(14, 12, 12);
   font-size: 40px;
-} */
+}  */
 #gradient {
   height: 200px;
-  background-image: linear-gradient(to right, rgba(80, 80, 177, 0), rgb(70, 72, 168));
+  background-image: linear-gradient(to right, rgba(10, 10, 48, 0), rgb(28, 30, 162));
 }
 
 @supports (font-variation-settings: "wght" 450) {
