--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,6 @@ body {
   font-size: 16px;
   line-height: 1;
   background-color: rgb(90, 86, 82);
- 
   /*background-size: cover;
     background-position: center;
     background-repeat: no-repeat; */
@@ -25,16 +24,16 @@ header {
   text-align: center;
   display: flex;
   justify-content: center;
-   align-items: center; 
+  align-items: center;
   width: 100%;
-   height: auto;
+  height: auto;
   background-color: rgb(156, 210, 227);
   border-bottom: 1px solid rgb(255, 255, 255);
-  color: rgb(217, 211, 211);
-} 
+  color: rgb(185, 178, 178);
+}
 
 p {
-  font-size: 2vw;
+  font-size: 1vw;
 }
 
 .mainBox {
@@ -46,12 +45,12 @@ p {
 }
 
 aside {
-  border-right: rgb(171, 171, 171) 2px solid; 
+  border-right: rgb(171, 171, 171) 2px solid;
   width: 20%;
   padding-top: 30px;
   /* max-width: 40vh; */
   /* min-width: 30vh; */
-  background-color: rgb(60, 52, 52);
+  background-color: rgb(80, 77, 77);
   color: rgb(185, 217, 255);
 }
 
@@ -90,6 +89,7 @@ input {
 #searchArea {
   /*  search input area id */
   color: rgb(7, 6, 6);
+  font-size: 25px;
 }
 
 #searchHistory {
@@ -133,14 +133,15 @@ border: rgb(186, 8, 8) solid 2px; */
   width: 100%;
   height: auto;
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   color: rgb(255, 255, 255);
-  font-size: 60px;
-  justify-content: center;
-  align-items: center;
+  font-size: 50px;
+  /* justify-content: center;
+  align-items: center; */
+  text-align: left;
   padding: 30px;
+  text-decoration: underline;
 }
-
 
 .weatherCard {
   width: 18%;
@@ -163,6 +164,12 @@ border: rgb(186, 8, 8) solid 2px; */
   color: rgb(14, 12, 12);
   font-size: 40px;
 }
+
+#uv {
+  width: 100px;
+  height: 50px;
+}
+
 /* #history2
 {
 
@@ -170,11 +177,13 @@ border: rgb(186, 8, 8) solid 2px; */
   background-color: rgb(176, 229, 250);
   border-radius: 8px;
   /* border: 2px solid red; */
-  /* width: 28vh;
+
+/* width: 28vh;
   height: 55px;
   color: rgb(14, 12, 12);
   font-size: 40px;
 }  */
+
 #gradient {
   height: 200px;
   background-image: linear-gradient(to right, rgba(10, 10, 48, 0), rgb(28, 30, 162));
