--- a/assets/style.css
+++ b/assets/style.css
@@ -132,7 +132,7 @@ border: rgb(186, 8, 8) solid 2px; */
 #fiveDaysForecast {
   width: 100%;
   height: auto;
-  margin-top: 100px;
+  margin-top: 0px;
   margin-bottom: 50px;
   color: rgb(255, 255, 255);
   font-size: 50px;
@@ -145,7 +145,7 @@ border: rgb(186, 8, 8) solid 2px; */
 
 .weatherCard {
   width: 18%;
-  height: 50vh;
+  height: auto;
   /* border: 2px solid white; */
   color: white;
   text-align: left;
